Bug 786267: B2G: Lower resolution while doing accelerated panning r=cjones